# Launcher

./: .gitignore  README.md  ________ini.js  __go.mod  __go.sum  __sw.js  applications.js  dev_install  dev_test  go.mod  index.html  ini.js  launcher.webmanifest  manifest.json  offline.html  package-lock.json  package.json  sw.js  workspace.code-workspace
AppAppStore/: last
__other__/MonitorIT/: README.rst  pyproject.toml  read.me
__other__/MonitorIT/AppLauncher/: __init__.py
__other__/MonitorIT/AppLauncher/backend/: accounts.py  backup.py  httpServer.py  sessions.py  users.py
__other__/MonitorIT/AppLauncher/backend/models/: accounts.py  sessions.py  users.py
__other__/MonitorIT/AppMonitorIT/backend/: api.py  config.py_  networks.py
__other__/MonitorIT/AppMonitorIT/backend/models/: nodes.py
__other__/MonitorIT/AppMonitorIT/install/: install.py
__other__/MonitorIT/data/zabbix/agents/linux/tmpl/: zabbix-agentd.init.d  zabbix-agentd.sh  zabbix-agentd.systemd  zabbix_agentd.conf
__other__/MonitorIT/data/zabbix/agents/linux/tmpl/zabbix_agentd.d/: mysql.conf
__other__/MonitorIT/data/zabbix/agents/win/v1.8/: zabbix_agentd.conf.tmpl
__other__/MonitorIT/data/zabbix/agents/win/v1.8/x64/: SvrRestart.cmd
__other__/MonitorIT/data/zabbix/agents/win/v4.2/: zabbix_agentd.conf.tmpl
__other__/MonitorIT/database/: launcher.db  monitor_it.db
__other__/MonitorIT/lib/: aobject.py  config.py  crypto.py
__other__/MonitorIT/lib/remote/: remote.py  sftp.py  ssh.py
__other__/MonitorIT/lib/user/: addUser
__other__/MonitorIT/lib/zabbix/: __agent.py  __winAgent.py
(+483 files in other folders)
